[tool.poetry]
name = "graph-intro"
version = "0.1.0"
description = ""
authors = ["shekharkoirala <shekharkoirala4@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
networkx = "^3.2.1"
numpy = "^1.26.4"
matplotlib = "^3.8.2"
scipy = "^1.12.0"
scikit-learn = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
